--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,7 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.apache.dolphinscheduler</groupId>
 	<artifactId>dolphinscheduler</artifactId>
@@ -25,10 +24,7 @@
 	<packaging>pom</packaging>
 	<name>${project.artifactId}</name>
 	<url>http://dolphinscheduler.apache.org</url>
-	<description>Dolphin Scheduler is a distributed and easy-to-expand visual DAG workflow scheduling system, dedicated
-		to solving the complex dependencies in data processing, making the scheduling system out of the box for data
-		processing.
-	</description>
+	<description>Dolphin Scheduler is a distributed and easy-to-expand visual DAG workflow scheduling system, dedicated to solving the complex dependencies in data processing, making the scheduling system out of the box for data processing.</description>
 	<licenses>
 		<license>
 			<name>Apache License 2.0</name>
@@ -68,6 +64,7 @@
 		<quartz.version>2.2.3</quartz.version>
 		<jackson.version>2.9.8</jackson.version>
 		<mybatis-plus.version>3.2.0</mybatis-plus.version>
+		<lombok.version>1.18.4</lombok.version>
 		<mybatis.spring.version>2.0.1</mybatis.spring.version>
 		<cron.utils.version>5.0.5</cron.utils.version>
 		<fastjson.version>1.2.61</fastjson.version>
@@ -82,11 +79,16 @@
 		<slf4j.api.version>1.7.5</slf4j.api.version>
 		<slf4j.log4j12.version>1.7.5</slf4j.log4j12.version>
 		<commons.collections.version>3.2.2</commons.collections.version>
+		<commons.lang.version>2.3</commons.lang.version>
+		<commons.lang3.version>3.5</commons.lang3.version>
 		<commons.httpclient>3.0.1</commons.httpclient>
+		<maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
+		<rpm-maven-plugion.version>2.2.0</rpm-maven-plugion.version>
 		<commons.beanutils.version>1.7.0</commons.beanutils.version>
 		<commons.configuration.version>1.10</commons.configuration.version>
 		<commons.email.version>1.5</commons.email.version>
 		<poi.version>3.17</poi.version>
+		<freemarker.version>2.3.21</freemarker.version>
 		<javax.servlet.api.version>3.1.0</javax.servlet.api.version>
 		<commons.collections4.version>4.1</commons.collections4.version>
 		<guava.version>20.0</guava.version>
@@ -96,9 +98,8 @@
 		<oshi.core.version>3.5.0</oshi.core.version>
 		<clickhouse.jdbc.version>0.1.52</clickhouse.jdbc.version>
 		<mssql.jdbc.version>6.1.0.jre8</mssql.jdbc.version>
-		<jsp-2.1.version>6.1.14</jsp-2.1.version>
+		<jsp.version>6.1.14</jsp.version>
 		<spotbugs.version>3.1.12</spotbugs.version>
-		<checkstyle.version>3.0.0</checkstyle.version>
 		<apache.rat.version>0.13</apache.rat.version>
 		<zookeeper.version>3.4.14</zookeeper.version>
 		<frontend-maven-plugin.version>1.6</frontend-maven-plugin.version>
@@ -108,17 +109,8 @@
 		<maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
 		<maven-source-plugin.version>2.4</maven-source-plugin.version>
 		<maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
-		<maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
-		<rpm-maven-plugion.version>2.2.0</rpm-maven-plugion.version>
 		<jacoco.version>0.8.4</jacoco.version>
-		<jcip.version>1.0</jcip.version>
 		<maven.deploy.skip>false</maven.deploy.skip>
-		<cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
-		<mockito.version>2.21.0</mockito.version>
-		<powermock.version>2.0.2</powermock.version>
-		<servlet-api.version>2.5</servlet-api.version>
-		<swagger.version>1.9.3</swagger.version>
-		<springfox.version>2.9.2</springfox.version>
 	</properties>
 
 	<dependencyManagement>
@@ -229,12 +221,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.dolphinscheduler</groupId>
-				<artifactId>dolphinscheduler-remote</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.dolphinscheduler</groupId>
-				<artifactId>dolphinscheduler-service</artifactId>
+				<artifactId>dolphinscheduler-rpc</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -242,6 +229,7 @@
 				<artifactId>dolphinscheduler-alert</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+
 			<dependency>
 				<groupId>org.apache.curator</groupId>
 				<artifactId>curator-framework</artifactId>
@@ -314,40 +302,9 @@
 				<version>${junit.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.mockito</groupId>
-				<artifactId>mockito-core</artifactId>
-				<version>${mockito.version}</version>
-				<type>jar</type>
-				<scope>test</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>org.powermock</groupId>
-				<artifactId>powermock-module-junit4</artifactId>
-				<version>${powermock.version}</version>
-				<type>jar</type>
-				<scope>test</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>org.powermock</groupId>
-				<artifactId>powermock-api-mockito2</artifactId>
-				<version>${powermock.version}</version>
-				<type>jar</type>
-				<scope>test</scope>
-				<exclusions>
-					<exclusion>
-						<groupId>org.mockito</groupId>
-						<artifactId>mockito-core</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-
-			<dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
 				<version>${mysql.connector.version}</version>
-				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
@@ -367,6 +324,16 @@
 				<version>${commons.collections.version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>commons-lang</groupId>
+				<artifactId>commons-lang</artifactId>
+				<version>${commons.lang.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>${commons.lang3.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>commons-httpclient</groupId>
 				<artifactId>commons-httpclient</artifactId>
@@ -409,6 +376,13 @@
 				<version>${poi.version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>org.freemarker</groupId>
+				<artifactId>freemarker</artifactId>
+				<version>${freemarker.version}</version>
+			</dependency>
+
+
 			<!-- hadoop -->
 			<dependency>
 				<groupId>org.apache.hadoop</groupId>
@@ -444,6 +418,12 @@
 				<groupId>org.apache.hadoop</groupId>
 				<artifactId>hadoop-aws</artifactId>
 				<version>${hadoop.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>${javax.servlet.api.version}</version>
 			</dependency>
 
 			<dependency>
@@ -500,42 +480,6 @@
 				<version>${jcip.version}</version>
 				<optional>true</optional>
 			</dependency>
-
-			<!-- for api module -->
-			<dependency>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>jsp-2.1</artifactId>
-				<version>${jsp-2.1.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>javax.servlet</groupId>
-				<artifactId>servlet-api</artifactId>
-				<version>${servlet-api.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>javax.servlet</groupId>
-				<artifactId>javax.servlet-api</artifactId>
-				<version>${javax.servlet.api.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>io.springfox</groupId>
-				<artifactId>springfox-swagger2</artifactId>
-				<version>${springfox.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>io.springfox</groupId>
-				<artifactId>springfox-swagger-ui</artifactId>
-				<version>${springfox.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>com.github.xiaoymin</groupId>
-				<artifactId>swagger-bootstrap-ui</artifactId>
-				<version>${swagger.version}</version>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -545,14 +489,6 @@
 
 		<pluginManagement>
 			<plugins>
-
-
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>rpm-maven-plugin</artifactId>
-					<version>${rpm-maven-plugion.version}</version>
-					<inherited>false</inherited>
-				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -581,7 +517,6 @@
 				</plugin>
 
 				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
 					<version>${maven-assembly-plugin.version}</version>
 				</plugin>
@@ -598,12 +533,6 @@
 					<version>${maven-source-plugin.version}</version>
 				</plugin>
 
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-dependency-plugin</artifactId>
-					<version>${maven-dependency-plugin.version}</version>
-
-				</plugin>
 			</plugins>
 
 		</pluginManagement>
@@ -661,6 +590,19 @@
 				</dependencies>
 			</plugin>
 
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>rpm-maven-plugin</artifactId>
+				<version>${rpm-maven-plugion.version}</version>
+				<inherited>false</inherited>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>${maven-dependency-plugin.version}</version>
+
+			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -670,7 +612,7 @@
 					<source>${java.version}</source>
 					<target>${java.version}</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
-					<skip>false</skip><!--not skip compile test classes-->
+					<skip>true</skip><!--not skip compile test classes-->
 				</configuration>
 			</plugin>
 			<plugin>
@@ -679,56 +621,7 @@
 				<version>${maven-surefire-plugin.version}</version>
 				<configuration>
 					<includes>
-						<include>**/common/utils/*.java</include>
-						<include>**/common/log/*.java</include>
-						<include>**/common/threadutils/*.java</include>
-						<include>**/common/graph/*.java</include>
-						<include>**/common/queue/*.java</include>
-						<include>**/common/task/SqoopParameterEntityTest.java</include>
-						<include>**/api/utils/CheckUtilsTest.java</include>
-						<include>**/api/utils/FileUtilsTest.java</include>
-						<include>**/api/utils/FourLetterWordTest.java</include>
-						<include>**/api/utils/exportprocess/DataSourceParamTest.java</include>
-						<include>**/api/utils/exportprocess/DependentParamTest.java</include>
-						<include>**/api/enums/*.java</include>
-						<include>**/api/service/AccessTokenServiceTest.java</include>
-						<include>**/api/service/QueueServiceTest.java</include>
-						<include>**/api/service/MonitorServiceTest.java</include>
-						<include>**/api/service/SessionServiceTest.java</include>
-						<include>**/api/service/UsersServiceTest.java</include>
-						<include>**/api/service/TenantServiceTest.java</include>
-						<include>**/api/service/WorkerGroupServiceTest.java</include>
-						<include>**/api/service/AlertGroupServiceTest.java</include>
-						<include>**/api/service/ProjectServiceTest.java</include>
-						<include>**/api/service/ProcessDefinitionServiceTest.java</include>
-						<include>**/api/service/UdfFuncServiceTest.java</include>
-						<include>**/api/service/ResourcesServiceTest.java</include>
-						<include>**/api/service/ExecutorService2Test.java</include>
-						<include>**/api/service/BaseServiceTest.java</include>
-						<include>**/api/service/BaseDAGServiceTest.java</include>
-						<include>**/api/service/LoggerServiceTest.java</include>
-						<include>**/api/service/DataAnalysisServiceTest.java</include>
-						<include>**/api/service/ProcessInstanceServiceTest.java</include>
-						<include>**/api/service/TaskInstanceServiceTest.java</include>
-						<include>**/alert/utils/ExcelUtilsTest.java</include>
-						<include>**/alert/utils/FuncUtilsTest.java</include>
-						<include>**/alert/utils/JSONUtilsTest.java</include>
-						<include>**/alert/utils/PropertyUtilsTest.java</include>
-						<include>**/server/utils/SparkArgsUtilsTest.java</include>
-						<include>**/server/utils/FlinkArgsUtilsTest.java</include>
-						<include>**/server/utils/ParamUtilsTest.java</include>
-						<include>**/server/master/MasterExecThreadTest.java</include>
-						<include>**/dao/mapper/AccessTokenMapperTest.java</include>
-						<include>**/dao/mapper/AlertGroupMapperTest.java</include>
-						<include>**/dao/mapper/AlertMapperTest.java</include>
-						<include>**/dao/mapper/CommandMapperTest.java</include>
-						<include>**/dao/cron/CronUtilsTest.java</include>
-						<include>**/dao/utils/DagHelperTest.java</include>
-						<include>**/alert/template/AlertTemplateFactoryTest.java</include>
-						<include>**/alert/template/impl/DefaultHTMLTemplateTest.java</include>
-						<include>**/server/worker/task/datax/DataxTaskTest.java</include>
-						<include>**/server/worker/task/sqoop/SqoopTaskTest.java</include>
-						<include>**/server/utils/DataxUtilsTest.java</include>
+						<include>**/*Test*.java</include><!--run test classes-->
 					</includes>
 					<!-- <skip>true</skip> -->
 				</configuration>
@@ -783,6 +676,7 @@
 						<exclude>**/dolphinscheduler-ui/src/view/common/outro.inc</exclude>
 						<exclude>**/dolphinscheduler-ui/src/view/common/meta.inc</exclude>
 						<exclude>**/dolphinscheduler-ui/src/combo/1.0.0/3rd.css</exclude>
+						<exclude>**/dolphinscheduler-rpc/src/main/java/org/apache/dolphinscheduler/rpc/LogViewServiceGrpc.java</exclude>
 					</excludes>
 					<consoleOutput>true</consoleOutput>
 				</configuration>
@@ -806,60 +700,6 @@
 					</dependency>
 				</dependencies>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>${checkstyle.version}</version>
-				<dependencies>
-					<dependency>
-						<groupId>com.puppycrawl.tools</groupId>
-						<artifactId>checkstyle</artifactId>
-						<version>8.18</version>
-					</dependency>
-				</dependencies>
-				<configuration>
-					<consoleOutput>true</consoleOutput>
-					<encoding>UTF-8</encoding>
-					<configLocation>style/checkstyle.xml</configLocation>
-					<suppressionsLocation>style/checkstyle-suppressions.xml</suppressionsLocation>
-					<suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
-					<failOnViolation>true</failOnViolation>
-					<violationSeverity>warning</violationSeverity>
-					<includeTestSourceDirectory>true</includeTestSourceDirectory>
-					<sourceDirectories>
-						<sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
-					</sourceDirectories>
-					<excludes>**\/generated-sources\/</excludes>
-					<skip>true</skip>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>compile</phase>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>${cobertura-maven-plugin.version}</version>
-				<configuration>
-					<check>
-					</check>
-					<aggregate>true</aggregate>
-					<outputDirectory>./target/cobertura</outputDirectory>
-					<encoding>${project.build.sourceEncoding}</encoding>
-					<quiet>true</quiet>
-					<format>xml</format>
-					<instrumentation>
-						<ignoreTrivial>true</ignoreTrivial>
-					</instrumentation>
-				</configuration>
-			</plugin>
-
 		</plugins>
 
 	</build>
@@ -871,9 +711,8 @@
 		<module>dolphinscheduler-api</module>
 		<module>dolphinscheduler-dao</module>
 		<module>dolphinscheduler-alert</module>
+		<module>dolphinscheduler-rpc</module>
 		<module>dolphinscheduler-dist</module>
-		<module>dolphinscheduler-remote</module>
-		<module>dolphinscheduler-service</module>
 	</modules>
 
 </project>
